fix for horizontal gaps in viewing

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 html, body {
   overflow-x: hidden;
   width: 100%;
+  background-color: #030712;
 }
 
 *, *::before, *::after {
